<resources>
    <string name="app_name">Fisher Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник Рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="fishes">Рыбы</string>
    <string name="bait">Наживка</string>
    <string name="tackle">Снасти</string>
    <string name="histories">Истории Рыбаков</string>
    <string name="advice">Советы</string>
    <string name="other">Разное</string>
</resources>